--- a/app/src/main/res/drawable/bottom_nav_indicator.xml
+++ b/app/src/main/res/drawable/bottom_nav_indicator.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="true" android:color="@color/yellow" >
+    <item android:state_checked="true" android:color="@color/green" >
         <layer-list>
             <item android:gravity="top|center_horizontal">
                 <shape android:shape="rectangle">
                     <size android:width="50dp" android:height="5dp" />
-                    <solid android:color="@color/yellow" />
+                    <solid android:color="@color/green" />
                 </shape>
             </item>
         </layer-list>
