--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="yellow">#FFF176</color>
+    <color name="green">#26A69A</color>
     <color name="gray">#989898</color>
+    <color name="red">#781E1E</color>
 
 </resources>
