--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,9 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    
+    <style name="numverPickerStyle">
+        <item name="android:textSize" > 26sp</item>
+        <item name="android:textColorPrimary">@color/green</item>
+    </style>
 </resources>
