button UI modify

--- a/app/src/main/res/drawable/pause_button__nonpressed_shape.xml
+++ b/app/src/main/res/drawable/pause_button__nonpressed_shape.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <solid
-        android:color="@color/darkred"/>
+        android:color="@color/red"/>
 
     <corners android:radius="30dp" />
 
