--- a/app/src/main/res/drawable/round_rectangle.xml
+++ b/app/src/main/res/drawable/round_rectangle.xml
@@ -3,12 +3,15 @@
     android:shape="rectangle">
 
     <solid
-        android:color="#00000000"/>
-
-    <corners android:radius="15dp" />
-
-    <stroke
-        android:width="2dp"
         android:color="@color/green"/>
 
+    <corners android:radius="30dp" />
+
+<!--    <stroke-->
+<!--        android:width="2dp"-->
+<!--        android:color="@color/green"/>-->
+<!--    <gradient-->
+<!--        android:angle="270"-->
+<!--        android:startColor="@color/green"-->
+<!--        />-->
 </shape>
