--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,9 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="green">#26A69A</color>
+    <color name="darkgreen">#1C776E</color>
     <color name="gray">#989898</color>
-    <color name="red">#781E1E</color>
+    <color name="red">#FF0000</color>
+    <color name="darkred">#B30101</color>
 
 </resources>
