--- a/app/src/main/res/drawable/button_pressed_shape.xml
+++ b/app/src/main/res/drawable/button_pressed_shape.xml
@@ -3,12 +3,12 @@
     android:shape="rectangle">
 
     <solid
-        android:color="#1E7870"/>
+        android:color="@color/darkgreen"/>
 
-    <corners android:radius="15dp" />
+    <corners android:radius="30dp" />
 
-    <stroke
-        android:width="2dp"
-        android:color="@color/green"/>
+<!--    <stroke-->
+<!--        android:width="2dp"-->
+<!--        android:color="@color/green"/>-->
 
 </shape>
