--- a/app/src/main/res/layout/fragment_add_list_dialog.xml
+++ b/app/src/main/res/layout/fragment_add_list_dialog.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/round_rectangle"
-    android:backgroundTint="@color/white"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/round_rectangle"
+    android:backgroundTint="@color/white"
     android:padding="10dp"
     tools:context=".AddListDialog">
 
@@ -114,27 +114,28 @@
     </LinearLayout>
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+
         <Button
-            android:text="@string/cancle"
-            android:layout_weight="1"
             android:id="@+id/cancel_Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp" />
-        <Button
-            android:text="@string/save"
+            android:layout_margin="10dp"
             android:layout_weight="1"
+            android:text="@string/cancle" />
+
+        <Button
             android:id="@+id/save_Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            />
+            android:layout_weight="1"
+            android:text="@string/save" />
     </LinearLayout>
 
 
