--- a/app/src/main/res/layout/fragment_timer_list.xml
+++ b/app/src/main/res/layout/fragment_timer_list.xml
@@ -12,16 +12,15 @@
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/add_FloatingButton"
-            android:layout_margin="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:contentDescription="@string/addlist"
-            app:icon="@drawable/baseline_add_24"
-            android:text="@string/add"
+            android:layout_margin="20dp"
             android:backgroundTint="@color/lightGreen"
-            />
+            android:contentDescription="@string/addlist"
+            android:text="@string/add"
+            app:icon="@drawable/baseline_add_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
