--- a/app/src/main/res/layout/fragment_add_list_dialog.xml
+++ b/app/src/main/res/layout/fragment_add_list_dialog.xml
@@ -7,6 +7,9 @@
     android:background="@drawable/round_rectangle"
     android:backgroundTint="@color/white"
     android:padding="10dp"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    android:id="@+id/Toplayout"
     tools:context=".AddListDialog">
 
     <TextView
@@ -27,6 +30,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:hint="@string/name"
+        android:singleLine="true"
+        android:imeOptions="actionDone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Title"
