--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,5 +17,7 @@
     <color name="yellowGreen">#C8E6C9</color>
     <color name="lightGreen">#AEE4AF</color>
 
+    <color name="blue">#0023FF</color>
+
 
 </resources>
