--- a/app/src/main/res/layout/fragment_basic_timer.xml
+++ b/app/src/main/res/layout/fragment_basic_timer.xml
@@ -200,7 +200,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/button_pressed_selector"
                 android:padding="10dp"
-                android:text="@string/cancle"
+                android:text="@string/cancel"
                 android:textColor="@color/black" />
 
             <androidx.appcompat.widget.AppCompatButton
