--- a/app/src/main/res/layout/fragment_basic_timer.xml
+++ b/app/src/main/res/layout/fragment_basic_timer.xml
@@ -4,14 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BasicTimerFragment">
+    tools:context=".BasicTimerFragment"
+    android:animateLayoutChanges="true"
+    >
+
+    <TextView
+        android:id="@+id/cntTextview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:padding="30dp"
+        android:textColor="@color/black"
+        android:textSize="100sp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
 
-        android:clipToPadding="false"
         android:id="@+id/stopLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clipToPadding="false"
         android:padding="10dp">
 
         <LinearLayout
@@ -101,10 +118,10 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:background="@drawable/button_pressed_selector"
+            android:elevation="10dp"
             android:padding="10dp"
             android:text="@string/start"
             android:textColor="@color/black"
-            android:elevation="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -112,17 +129,17 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:visibility="gone"
         android:id="@+id/TimerLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="10dp">
+        android:padding="10dp"
+        android:visibility="gone">
 
         <LinearLayout
-            android:layout_marginHorizontal="20dp"
             android:id="@+id/linearLayout_2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
             android:orientation="horizontal"
             android:padding="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -184,9 +201,9 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_marginHorizontal="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
