--- a/app/src/main/res/layout/fragment_add_list_dialog.xml
+++ b/app/src/main/res/layout/fragment_add_list_dialog.xml
@@ -2,14 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/Toplayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/round_rectangle"
     android:backgroundTint="@color/white"
-    android:padding="10dp"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    android:id="@+id/Toplayout"
+    android:padding="10dp"
     tools:context=".AddListDialog">
 
     <TextView
@@ -24,20 +24,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <EditText
         android:id="@+id/NameEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:hint="@string/name"
-        android:textColor="@color/black"
-        android:singleLine="true"
         android:imeOptions="actionDone"
+        android:singleLine="true"
+        android:textColor="@color/black"
+        android:theme="@style/MyEditTextTheme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Title"
-        tools:layout_editor_absoluteY="10dp"
-        android:theme="@style/MyEditTextTheme"/>
+        tools:layout_editor_absoluteY="10dp" />
+
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -120,13 +122,51 @@
 
     </LinearLayout>
 
+    <RadioGroup
+        android:id="@+id/radiogroup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+
+        <androidx.appcompat.widget.AppCompatRadioButton
+            android:id="@+id/radioButton_private"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/onoff_select"
+            android:button="@android:color/transparent"
+            android:checked="true"
+            android:gravity="center"
+            android:text="@string/selectOff"
+            android:textColor="@drawable/onoff_select_text" />
+
+        <androidx.appcompat.widget.AppCompatRadioButton
+            android:id="@+id/radioButton_public"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/onoff_select"
+            android:button="@android:color/transparent"
+            android:gravity="center"
+            android:text="@string/selectON"
+            android:textColor="@drawable/onoff_select_text" />
+
+    </RadioGroup>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+        app:layout_constraintTop_toBottomOf="@+id/radiogroup">
 
         <Button
             android:id="@+id/cancel_Button"
