modify 설정- 알람(진동/소리) onoff 커스텀

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
 
     <color name="yellowGreen">#C8E6C9</color>
     <color name="lightGreen">#A4E6A5</color>
+    <color name="moreLightGreen">#D9E8DA</color>
     <color name="grassGreen">#269828</color>
 
     <color name="blue">#0023FF</color>
